[gd_scene load_steps=11 format=3 uid="uid://dn48sgfoxepwt"]

[ext_resource type="Script" path="res://escenas/configuracion.gd" id="1_hbnx1"]
[ext_resource type="Texture2D" uid="uid://bd6hft4df2fh1" path="res://assets/noche-luna-oscura-bosque-paisaje-naturaleza-vectorial_104785-1611.jpg" id="2_0lk5g"]
[ext_resource type="FontFile" uid="uid://2qhmj5357cwp" path="res://assets/SocialScienceSans_PERSONAL_USE_ONLY.otf" id="3_dgkhd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wocd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afuxd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hed2v"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mhxc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5kwhv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7gqvo"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_js432"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Configuracion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hbnx1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0lk5g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 68.0
offset_top = -115.0
offset_right = 429.0
offset_bottom = 115.0
grow_vertical = 2

[node name="boton1" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("3_dgkhd")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_8wocd")
theme_override_styles/hover = SubResource("StyleBoxFlat_afuxd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hed2v")
theme_override_styles/focus = SubResource("StyleBoxFlat_7mhxc")
text = "button"

[node name="boton2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("3_dgkhd")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_8wocd")
theme_override_styles/hover = SubResource("StyleBoxFlat_afuxd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hed2v")
theme_override_styles/focus = SubResource("StyleBoxFlat_7mhxc")
text = "button"

[node name="Boton volver" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("3_dgkhd")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_8wocd")
theme_override_styles/hover = SubResource("StyleBoxFlat_5kwhv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7gqvo")
theme_override_styles/focus = SubResource("StyleBoxFlat_js432")
text = "return"

[connection signal="pressed" from="VBoxContainer/boton1" to="." method="_on_boton_1_pressed"]
[connection signal="pressed" from="VBoxContainer/boton2" to="." method="_on_boton_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Boton volver" to="." method="_on_boton_volver_pressed"]
